# mav-lite

./: Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml
.github/workflows/: docker-build.yml
src/: config.rs  main.rs  metrics.rs  router.rs
src/connection/: mod.rs  tcp.rs  uart.rs  uart_discovery.rs
src/mavlink/: mod.rs  packet.rs
