[package]
name = "mav-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bytes = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
